--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="about-image animate-on-scroll">
-                    <img src="assets/images/Profile-Photo.JPG" alt="Raagasri Padma" class="profile-image" />
+                    <img src="Profile-Photo.JPG" alt="Raagasri Padma" class="profile-image" />
                 </div>
                 
             </div>
