--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a href="https://www.linkedin.com/in/raagasri-padma-0587201a1" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:raagasri2801@gmail.com"><i class="fas fa-envelope"></i></a>
                 <a href="tel:3202917921"><i class="fas fa-phone"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/raagasri" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
         <div class="scroll-down">
