--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <i class="fas fa-laptop-code"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>Associate Systems Engineer</h3>
+                        <h3>Associate System Engineer</h3>
                         <h4>IBM Pvt Ltd India</h4>
                         <p>Managing servers and tickets using Open Text Content Server Application through remote desktop connections. Oracle Certified Professional - Java SE 11 Developer certification.</p>
                     </div>
